--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class="container">
     <div class="scene">
       <div class="floor"></div>
+
     </div>
     <div class="elements">
       <div class="cube">
@@ -21,14 +22,16 @@
         <div class="back"></div>
         <div class="left"></div>
         <div class="right"></div>
-        <div class="top"></div>
+        <div class="top">
+          <div class="shadow"></div>
+        </div>
         <div class="bottom"></div>
       </div>
       <div class="ball"></div>
     </div>
   </div>
-  
-  
+
+
 
 </body>
 
